force-app/main/default/objects/ObjectConfiguration__mdt/ObjectConfiguration__mdt.object-meta.xml
<CustomObject>
    <label>ObjectConfiguration</label>
    <pluralLabel>ObjectConfigurations</pluralLabel>
</CustomObject>