force-app/main/default/objects/ObjectConfiguration__mdt/fields/Fields_to_Display__c.field-meta.xml
<CustomField>
    <fullName>Fields_to_Display__c</fullName>
    <label>Fields to Display</label>
    <type>TextArea</type>
</CustomField>