force-app/main/default/objects/ObjectConfiguration__mdt/fields/Object_Label__c.field-meta.xml
<CustomField>
    <fullName>Object_Label__c</fullName>
    <label>Object Label</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>